<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Sound Kit Community</string>
    <string name="quick_tile_label">Valve Control</string>
    <string name="notification_channel_name">Sound Kit connection</string>
    <string name="notification_channel_description">Persistent BLE connection and valve control status</string>
    <string name="notification_action_connect">Connect</string>
    <string name="notification_action_open">Open</string>
    <string name="notification_action_close">Close</string>
    <string name="notification_action_disconnect">Disconnect</string>
    <string name="notification_action_pause_drive_mode">Pause drive mode</string>
    <string name="notification_action_resume_drive_mode">Resume drive mode</string>
    <string name="widget_description">Quick valve controls while connected</string>
    <string name="widget_subtitle">Parked use only</string>
    <string name="widget_open_app">Open app</string>
    <string name="shortcut_open_valves">Open valves</string>
    <string name="shortcut_open_valves_long">Open exhaust valves</string>
    <string name="shortcut_close_valves">Close valves</string>
    <string name="shortcut_close_valves_long">Close exhaust valves</string>
    <string name="shortcut_valve_status">Valve status</string>
    <string name="shortcut_valve_status_long">Get exhaust valve status</string>
</resources>

